WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
160281
[soup] Incorrect usage of relaxAdoptionRequirement in the constructor of SocketStreamHandle
https://bugs.webkit.org/show_bug.cgi?id=160281
Summary
[soup] Incorrect usage of relaxAdoptionRequirement in the constructor of Sock...
Fujii Hironori
Reported
2016-07-27 18:42:45 PDT
(
Bug 160229 Comment #6
)
> View in context: >
https://bugs.webkit.org/attachment.cgi?id=284672&action=review
> > > Source/WebCore/ChangeLog:11 > > + An assertion fails because refcount of SocketStreamHandle is > > + incremented before adoptRef, in the constructor of > > + SocketStreamHandle. The constructor of SocketStreamHandle needs > > + to increment recount because it passes this pointer to libsoup. > > This is an incorrect solution; relaxAdoptionRequirement should *not* be used > here. The correct solution is to make the constructor private and make a > public creation function which does the rest of the job of initializing the > object, *after* the constructor has run and we have the object pointer > inside a Ref already.
Attachments
Patch
(5.74 KB, patch)
2016-07-27 20:32 PDT
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2016-07-27 20:32:52 PDT
Created
attachment 284752
[details]
Patch
Carlos Garcia Campos
Comment 2
2016-07-27 23:07:17 PDT
Comment on
attachment 284752
[details]
Patch Excellent! thank you
WebKit Commit Bot
Comment 3
2016-07-27 23:29:24 PDT
Comment on
attachment 284752
[details]
Patch Clearing flags on attachment: 284752 Committed
r203813
: <
http://trac.webkit.org/changeset/203813
>
WebKit Commit Bot
Comment 4
2016-07-27 23:29:29 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug