[soup] Incorrect usage of relaxAdoptionRequirement in the constructor of SocketStreamHandle https://bugs.webkit.org/show_bug.cgi?id=160281

Patch by Fujii Hironori <Hironori.Fujii@sony.com> on 2016-07-27
Reviewed by Carlos Garcia Campos.

No new tests (No behavior change).

Incrementing refcount in a constructor causes an assertion failure
that it's not adopted yet.  So, relaxAdoptionRequirement() was
used to avoid the problem in the constructors of
SocketStreamHandle.  This is a incorrect solution. The correct
solution is to make SocketStreamHandle::create() increment the
refcount after calling the constructor.

* platform/network/soup/SocketStreamHandle.h: Removed the second
constructor of SocketStreamHandle which is not used anymore.
Uninlined create() because this is not trivial anymore.
* platform/network/soup/SocketStreamHandleSoup.cpp:
(WebCore::SocketStreamHandle::create): Do the rest of jobs which
was done by the constructors.
(WebCore::SocketStreamHandle::SocketStreamHandle): Move the jobs
after initialization to create().
Removed the second constructor.

Canonical link: https://commits.webkit.org/178441@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@203813 268f45cc-cd09-0410-ab3c-d52691b4dbfc