Source/WebCore/platform/network/soup/SocketStreamHandle.h
@@ -49,14 +49,13 @@ class SocketStreamHandleClient;
 
 class SocketStreamHandle final : public RefCounted<SocketStreamHandle>, public SocketStreamHandleBase {
 public:
-    static Ref<SocketStreamHandle> create(const URL& url, SocketStreamHandleClient& client, NetworkingContext&, SessionID) { return adoptRef(*new SocketStreamHandle(url, client)); }
-    static Ref<SocketStreamHandle> create(GSocketConnection* socketConnection, SocketStreamHandleClient& client) { return adoptRef(*new SocketStreamHandle(socketConnection, client)); }
+    static Ref<SocketStreamHandle> create(const URL&, SocketStreamHandleClient&, NetworkingContext&, SessionID);
+    static Ref<SocketStreamHandle> create(GSocketConnection*, SocketStreamHandleClient&);
 
     virtual ~SocketStreamHandle();
 
 private:
     SocketStreamHandle(const URL&, SocketStreamHandleClient&);
-    SocketStreamHandle(GSocketConnection*, SocketStreamHandleClient&);
 
     int platformSend(const char* data, int length) override;
     void platformClose() override;
